--- a/src/app/top-menu-bar/top-menu-bar.component.html
+++ b/src/app/top-menu-bar/top-menu-bar.component.html
@@ -1,5 +1,7 @@
 <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-  <mat-button-toggle value="bold">Bold</mat-button-toggle>
-  <mat-button-toggle value="italic">Italic</mat-button-toggle>
-  <mat-button-toggle value="underline">Underline</mat-button-toggle>
+  <mat-button-toggle value="bold">Home</mat-button-toggle>
+  <mat-button-toggle value="bold">US</mat-button-toggle>
+  <mat-button-toggle value="bold">World</mat-button-toggle>
+  <mat-button-toggle value="bold">Science</mat-button-toggle>
+  <mat-button-toggle value="bold">Arts</mat-button-toggle>
 </mat-button-toggle-group>
