--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-top-menu-bar></app-top-menu-bar>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-item-list></app-item-list>
 <app-footer></app-footer>
