--- a/src/app/top-menu-bar/top-menu-bar.component.html
+++ b/src/app/top-menu-bar/top-menu-bar.component.html
@@ -1,7 +1,7 @@
-<mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-  <mat-button-toggle value="bold">Home</mat-button-toggle>
-  <mat-button-toggle value="bold">US</mat-button-toggle>
-  <mat-button-toggle value="bold">World</mat-button-toggle>
-  <mat-button-toggle value="bold">Science</mat-button-toggle>
-  <mat-button-toggle value="bold">Arts</mat-button-toggle>
-</mat-button-toggle-group>
+
+  <button (click)="loadData('Home')" value="bold">Home</button>
+  <button (click)="loadData('Us')" value="bold">US</button>
+  <button (click)="loadData('World')" value="bold">World</button>
+  <button (click)="loadData('Science')" value="bold">Science</button>
+  <button (click)="loadData('Arts')" value="bold">Arts</button>
+
