--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-top-menu-bar></app-top-menu-bar>
-<!-- <router-outlet></router-outlet> -->
-<app-item-list></app-item-list>
-<app-footer></app-footer>
+<body>
+    <div class="content">
+        <app-top-menu-bar></app-top-menu-bar>
+        <app-item-list></app-item-list>
+        <app-footer></app-footer>
+    </div>
+</body>
