--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,45 +1,21 @@
-<div [ngClass]="{'body-color': (showLoader$| async)==true}">
-  <div *ngFor="let item of (items$| async)">
-
-    <h1> {{item?.title}}</h1>
-    <p> {{item?.abstract}}</p>
-    <div *ngFor="let media of item.multimedia">
-      <img [src]="media?.url" />
-      <p>{{media.caption}}</p>
+<div [ngClass]="{ 'body-color': (showLoader$ | async) == true }">
+  <div *ngFor="let item of items$ | async" >
+    <div class="item">
+      <h1>{{ item?.title }}</h1>
+      <p class="content-txt content-font">{{ item?.abstract }}</p>
+      <div *ngFor="let media of item.multimedia">
+        <img [src]="media?.url" />
+        <p class="content-txt">{{ media.caption }}</p>
+        <b>{{ item?.byline }}</b>
+        <p>
+          {{ item?.created_date | date: "MMMM d, y" }} &nbsp; Updated
+          {{ item?.updated_date | date: "h:mm a" }}
+        </p>
+      </div>
     </div>
-    byline:{{item?.byline}}<br />
-    created_date{{item?.created_date | date:'MMMM d, y'}}<br />
-
-    Updated {{item?.updated_date| date:'h:mm a' }}<br />
-
-    <!--  section:{{item?.section}}<br/>
-    subsection:{{item?.subsection}}<br/>
-    title:{{item?.title}}<br/>
-    IMage:{{(item?.multimedia| json)['url']}} <br/>
-    multimedia:{{(item?.multimedia| json)['caption']}} <br/>
-    byline:{{item?.byline}}<br/>
-
-   created_date{{item?.created_date}}<br/>
-    updated_date:{{item?.updated_date}}<br/>
-
-    url:{{item?.url}}<br/>
-    uri:{{item?.uri}}<br/>
-
-    item_type:{{item?.item_type}}<br/> -->
-
-
-    <!-- published_date:{{item?.published_date}}<br/>
-    material_type_facet:{{item?.material_type_facet}}<br/>
-    kicker:{{item?.kicker}}<br/>
-    des_facet:{{item?.des_facet | json}}<br/>
-    org_facet:{{item?.org_facet| json}}<br/>
-    per_facet:{{item?.per_facet| json}}<br/>
-    geo_facet{{item?.geo_facet| json}}<br/>
-
-    short_url:{{item?.short_url| json}} -->
   </div>
-  <div class="center" *ngIf="(showLoader$| async)">
-    <mat-progress-spinner *ngIf="(showLoader$| async)" mode="indeterminate" diameter='20' strokeWidth='50'>
+  <div class="center" *ngIf="showLoader$ | async">
+    <mat-progress-spinner *ngIf="showLoader$ | async" mode="indeterminate" diameter="20" strokeWidth="50">
     </mat-progress-spinner>
   </div>
 </div>
