Applied CSS in top-menu-bar  component

--- a/src/app/top-menu-bar/top-menu-bar.component.html
+++ b/src/app/top-menu-bar/top-menu-bar.component.html
@@ -1,7 +1,7 @@
-
-  <button (click)="loadData('Home')" value="bold">Home</button>
-  <button (click)="loadData('Us')" value="bold">US</button>
-  <button (click)="loadData('World')" value="bold">World</button>
-  <button (click)="loadData('Science')" value="bold">Science</button>
-  <button (click)="loadData('Arts')" value="bold">Arts</button>
-
+<div class="topnav" id="myTopnav">
+  <a href="javascript:void(0);" (click)="loadData('Home')" value="bold" class="active">Home</a>
+  <a href="javascript:void(0);" (click)="loadData('Us')" value="bold">US</a>
+  <a href="javascript:void(0);" (click)="loadData('World')" value="bold">World</a>
+  <a href="javascript:void(0);" (click)="loadData('Science')" value="bold">Science</a>
+  <a href="javascript:void(0);" (click)="loadData('Arts')" value="bold">Arts</a>
+</div>
