--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -7,10 +7,16 @@
         <img [src]="media?.url" />
         <p class="content-txt">{{ media.caption }}</p>
         <b>{{ item?.byline }}</b>
-        <p>
-          {{ item?.created_date | date: "MMMM d, y" }} &nbsp; Updated
-          {{ item?.updated_date | date: "h:mm a" }}
-        </p>
+
+        <span id="textbox">
+          <p class="alignleft">
+            {{ item?.created_date | date: "MMMM d, y" }} &nbsp; Updated
+            {{ item?.updated_date | date: "h:mm a" }}
+          </p>
+          <button type="button" class="alignright" (click)="changeURL(item?.short_url)"> Details </button>
+        </span>
+
+
       </div>
     </div>
   </div>
@@ -18,4 +24,6 @@
     <mat-progress-spinner *ngIf="showLoader$ | async" mode="indeterminate" diameter="20" strokeWidth="50">
     </mat-progress-spinner>
   </div>
+
+  <iframe width="100%" height="300" [src]="(url$| async | safe)"></iframe>
 </div>
