--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -6,17 +6,20 @@
       <div *ngFor="let media of item.multimedia">
         <img [src]="media?.url" />
         <p class="content-txt">{{ media.caption }}</p>
-        <b>{{ item?.byline }}</b>
-
-        <span id="textbox">
-          <p class="alignleft">
+        <p>
+          <strong>{{ item?.byline }}</strong>
+        </p>
+        <div class="clearfix"></div>
+        <p style="display: inline;">
+          <span class="alignleft">
             {{ item?.created_date | date: "MMMM d, y" }} &nbsp; Updated
             {{ item?.updated_date | date: "h:mm a" }}
-          </p>
-          <button type="button" class="alignright" (click)="changeURL(item?.short_url)"> Details </button>
-        </span>
-
-
+          </span>
+          <button type="button" class="alignright" (click)="changeURL(item?.short_url)">
+            Show More >>>
+          </button>
+        </p>
+        <div class="clearfix"></div>
       </div>
     </div>
   </div>
@@ -24,6 +27,4 @@
     <mat-progress-spinner *ngIf="showLoader$ | async" mode="indeterminate" diameter="20" strokeWidth="50">
     </mat-progress-spinner>
   </div>
-
-  <iframe width="100%" height="300" [src]="(url$| async | safe)"></iframe>
 </div>
